# j18n

./: Cargo.toml  README.md  Runfile.json
.github/workflows/: release.yml
crates/j18n-anthropic-api/: Cargo.toml
crates/j18n-anthropic-api/src/: lib.rs  model.rs  translator.rs
crates/j18n-claude-code/src/: lib.rs
crates/j18n-cli/: Cargo.toml
crates/j18n-cli/src/: args.rs  config.rs  expand.rs  main.rs
crates/j18n-core/src/: i18n.rs  language.rs  mode.rs  pattern.rs
crates/j18n-gemini-api/src/: lib.rs  translator.rs
crates/j18n-generator/: Cargo.toml
crates/j18n-generator/src/: lib.rs
crates/j18n-io/: Cargo.toml
crates/j18n-io/src/: compare.rs  hash_cache.rs  hashing.rs  indent.rs  json_walker.rs  lib.rs  reader.rs  writer.rs
crates/j18n-openai-api/: Cargo.toml
crates/j18n-openai-api/src/: lib.rs  model.rs  translator.rs
crates/j18n-translator/src/: extrapolation.rs  lib.rs  prompt.rs
crates/j18n-validator/: Cargo.toml
crates/j18n-validator/src/: lib.rs
