[workspace]
resolver = "2"
members = [
	"crates/j18n-cli",
	"crates/j18n-anthropic-api",
	"crates/j18n-claude-code",
	"crates/j18n-codex",
	"crates/j18n-core",
	"crates/j18n-gemini-api",
	"crates/j18n-generator",
	"crates/j18n-io",
	"crates/j18n-openai-api",
	"crates/j18n-translator",
	"crates/j18n-validator",
]

[workspace.package]
version = "0.7.0"
rust-version = "1.94.1"
edition = "2021"
license = "MIT"
publish = false
repository = "https://github.com/Skiley/j18n"
homepage = "https://github.com/Skiley/j18n"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tempfile = "3.13"
thiserror = "1.0"
tokio = { version = "1.40", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

j18n-anthropic-api = { path = "crates/j18n-anthropic-api" }
j18n-claude-code = { path = "crates/j18n-claude-code" }
j18n-codex = { path = "crates/j18n-codex" }
j18n-core = { path = "crates/j18n-core" }
j18n-gemini-api = { path = "crates/j18n-gemini-api" }
j18n-generator = { path = "crates/j18n-generator" }
j18n-io = { path = "crates/j18n-io" }
j18n-openai-api = { path = "crates/j18n-openai-api" }
j18n-translator = { path = "crates/j18n-translator" }
j18n-validator = { path = "crates/j18n-validator" }

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = "z"
strip = true
