[package]
edition.workspace = true
license.workspace = true
name = "j18n-cli"
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "j18n"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
j18n-claude-code.workspace = true
j18n-core.workspace = true
j18n-gemini-api.workspace = true
j18n-generator.workspace = true
j18n-translator.workspace = true
j18n-validator.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
