[package]
edition.workspace = true
license.workspace = true
name = "j18n-generator"
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
futures.workspace = true
j18n-core.workspace = true
j18n-io.workspace = true
j18n-translator.workspace = true
j18n-validator.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
async-trait.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread", "sync"] }
