[package]
edition.workspace = true
license.workspace = true
name = "j18n-io"
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
j18n-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "fs", "io-util"] }
