[package]
edition.workspace = true
license.workspace = true
name = "j18n-openai-api"
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
j18n-core.workspace = true
j18n-translator.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
